fix: fixing issues with previous work and colour table alignment

--- a/packages/react/src/00-foundations/colours/colours.development.scss
+++ b/packages/react/src/00-foundations/colours/colours.development.scss
@@ -12,7 +12,10 @@
 
   .colour-table td {
     position: relative;
-    height: 100px;
+
+    &.grow {
+      height: 90px;
+    }
   }
 
   .colour-table code {
